openshift/kustomize/base/networkpolicies/allow-gateway-to-wps-sfms-fwi-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: wps-__SUFFIX__-sfms-fwi
  name: allow-gateway-to-wps-__SUFFIX__-sfms-fwi
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          environment: test
          name: 264e6f
    ports:
    - port: 8080
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          environment: prod
          name: 264e6f
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      name: wps-__SUFFIX__-sfms-fwi
  policyTypes:
  - Ingress
